--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <image src="Daniel R..jpg" />
   <h1>Daniel's Resume</h1>
   <p1>This is my first web page!</p1>
+  <a href="#">This is my highlight reel!</a>
 </body>
 
 </html>
