--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <html>
 
 <head>
+  <title>Daniel's Resume</title>  
 <link href="style.css" rel="StyleSheet" />
 </head>
 
 <body>
   <image src="Daniel R..jpg" />
-  <h1>Daniel's Resume</h1>
-  <p1>This is my first web page!</p1>
-  <a href="#">This is my highlight reel!</a>
-</body>
+  <h1><strong> Daniel R. Callaway</strong></h1>
+  <p1>18717 San Jose Blvd<br>
+  Lathrup Village, MI 48076<br>
+  313-247-7286<br>
+    <a href=mailto:<danielcallaway> danielrcallaway@gmail.com?subject="Your Resume">Click here to email me!</a>
+                                                                 </p1>
+  </body>
 
 </html>
