--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p1>18717 San Jose Blvd<br>
   Lathrup Village, MI 48076<br>
   313-247-7286<br>
-    <a href=mailto:danielrcallaway@gmail.com</a>
+    <a href=mailto:<danielrcallaway> danielrcallaway@gmail.com</a>
                                                                  </p1>
   </body>
 
