--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <image src="Daniel R..jpg" />
+  <image src="Daniel R..jpg" height="200" />
   <h1><strong> Daniel R. Callaway</strong></h1>
   <p1>18717 San Jose Blvd<br>
   Lathrup Village, MI 48076<br>
