--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 </head>
 
 <body>
-  <image src="Daniel R..jpg" height="200" />
   <h1><strong> Daniel R. Callaway</strong></h1>
-  <p1>18717 San Jose Blvd<br>
+  <div id="address">
+    <p><image src="Daniel R..jpg" height="200" /></p>
+    <p>18717 San Jose Blvd<br>
   Lathrup Village, MI 48076<br>
   313-247-7286<br>
-    <a href=mailto:<danielrcallaway> danielrcallaway@gmail.com</a>
-                                                                 </p1>
+      <a href=mailto:<danielrcallaway> danielrcallaway@gmail.com</a></p>
+        <p><strong>Hard Worker</strong></p>
+        <p><strong>Team Player</strong></p>
+        <p><strong>Problem Solver</strong></p>
+        <p><strong>One of a Kind</strong></p>
+  </div>
+                                                              
   </body>
 
 </html>
