--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         <p><strong>Problem Solver</strong></p>
         <p><strong>One of a Kind</strong></p>
   </div>
-                                                              
+<div id="content">
+<h2>Work Experience</h2>
+	<p><span class="year">2017 - present</span><strong>City of Detroit</strong>; Detroit, MI<br>
+  <em>Investigator</em></p>
+  <ul>
+  <li>Investigated citizen complaints against Detroit Police Officers.</li>
+  <li>Identified any misconduct in any citizen complaints that were investigated.</li>
+</ul>
   </body>
 
 </html>
