--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 <div id="content">
 <h2>Work Experience</h2>
-<strong>City of Detroit</strong>; Detroit, MI<br>
+<strong>City of Detroit</strong>; Detroit, MI
 	<p><span class="year">2017 - present</span><br>
   <em>Investigator</em></p>
   <ul>
