--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   </div>
 <div id="content">
 <h2>Work Experience</h2>
-<p><strong>City of Detroit</strong>; Detroit, MI
-<span class="year">2017 - present</span><br>
+  <p><span class="year">2017 - present</span><strong>City of Detroit</strong>; Detroit, MI<br>
   <em>Investigator</em></p>
   <ul>
   <li>Investigated citizen complaints against Detroit Police Officers.</li>
